# visualizations

./: .gitignore  .gitmodules  README.md  requirements_blenderproc.txt  setup.cfg
scripts/: install_blenderproc.py
scripts/NPHM/: ablation_comparison.py  ablations.py  dataset_figure.py  expression_interpolations.py  expression_transfer.py  extract_overview.py  full_dataset.py  results_comparison_figure.py  results_expression_figure.py  results_expression_video.py  results_identity_video.py  results_identity_video_ablation.py  roate_head.py  shape_interpolations.py  single_scan.py  teaser.py  teaser_fitting.py  teaser_interpolation.py  teaser_square.py
scripts/render/: single_mesh.py
src/visualizations/: env.py  env_nphm.py
src/visualizations/blender/: geometry.py  io.py  readply.py  shading.py
src/visualizations/cairo/: arrow.py  image.py
src/visualizations/math/: matrix.py  vector.py
src/visualizations/render/: single_mesh.py
test/: asdf.py  test_readply.py  test_render_single_mesh.py
test/test_cairo/: test_image.py
