[metadata]
name = visualizations
version = 0.0.2
author = Tobias Kirschstein
author_email = tobias.kirschstein@gmail.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
    # Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    # License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    blenderproc==2.5.0
    fake-bpy-module-3.3
    elias>=0.1.0
    numpy
    opencv-python
    scipy
    # Required by elias
    pyyaml>=5.4.1
    tyro
;    trimesh==3.16.0
    trimesh
    pyvista
    tqdm
    pixie-python==4.3.0
    pycairo~=1.23.0
[options.packages.find]
where = src